Lots of updates

--- a/app/js/modules/projects/templates/project.hbs
+++ b/app/js/modules/projects/templates/project.hbs
@@ -1,6 +1,8 @@
 <span class="handle"></span>
 <div>
-	<textarea class="clickable" rows="1">My First Item...</textarea>
+	<textarea class="clickable" rows="1">{{name}}</textarea>
 </div>
-<input type="checkbox" class="clickable">
-<ol></ol>
+<input type="checkbox" class="clickable" {{#if completed}}checked{{/if}}>
+<ol>
+
+</ol>
