--- a/app/less/app.less
+++ b/app/less/app.less
@@ -2,69 +2,60 @@ body{
 	background:#eee;
 	padding:0;
 	margin:0;
-	#left-side{
-		background:#333;
-		position:fixed;
-		top:0;
-		bottom:0;
-		left:0;
-		width:240px;
-		#flow-logo{
-			text-align:center;
-			padding-top:1em;
-			img{
-				width:200px;
-			}
-		}
-	}
 }
-
-
+#left-side{
+	background:#333;
+	position:fixed;
+	top:0;
+	bottom:0;
+	left:0;
+	width:240px;
+}
+#flow-logo{
+	text-align:center;
+	padding-top:1em;
+}
+#flow-logo img{
+	width:200px;
+}
 #projects{
 	background: #fff;
     width: 500px;
     padding: 4em;
     margin-left:240px;
 }
-
-ul{
+.handle{
+    border-width: 2px;
+    border-style: solid;
+    margin: 0 !important;
+    padding: 0 !important;
+    position: absolute;
+    left: -19px;
+    display: inline-block;
+    width: 19px;
+    height: 19px;
+    z-index: 1;
+    background: #fff;
+    border-radius: 6px;
+}
+ol{
     border-left: 1px solid #dbe9ee;
     list-style: none;
     margin: 0 0 0 10px;
     padding-left: 0;
 	line-height:1.8em;
-	li{
-	    margin: 0 0 0 7px;
-	    padding: 4px 0 4px 15px;
-	    position: relative;
-		    .handle{
-		    border-width: 2px;
-		    border-style: solid;
-		    margin: 0 !important;
-		    padding: 0 !important;
-		    position: absolute;
-		    left: -19px;
-		    display: inline-block;
-		    width: 19px;
-		    height: 19px;
-		    z-index: 1;
-		    background: #fff;
-		    border-radius: 6px;
-		}
-		&:first-child{
-			padding-top:0;
-		}
-		&:last-child{
-			padding-bottom:0;
-		}
-	}
-	> li:first-child > div > .sortableListsOpener{
-		border-top:4px solid #fff;
-		top:0;
-	}
 }
-
-
+ol li{
+    margin: 0 0 0 7px;
+    padding: 4px 0 4px 15px;
+    position: relative;
+}
+ol li:first-child{
+	padding-top:0;
+}
+ol li:last-child{
+	padding-bottom:0;
+}
 input[type=checkbox]{
 	margin: 0px 6px 0px -17px;
 	margin: 0 !important;
@@ -72,10 +63,14 @@ input[type=checkbox]{
 	right:0px;
 	top:3px;
 }
+ol > li:first-child > div > .sortableListsOpener{
+	border-top:4px solid #fff;
+	top:0;
+}
 li.category > input[type=checkbox]{
 	display:none;
 }
-li.category > ul {
+li.category > ol {
     margin-top: 7px;
 }
 li.category > .handle{
@@ -158,6 +153,7 @@ li > div {
 	border-color: #da9576;
 	background-color: #da9576;
 }
+
 .list-color-5{
 	border-left-color: #da7686;
 }
