Trying some JQUI stuff

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -125,6 +125,31 @@ li > div {
 }
 
 
+
+li.placeholder-outgoing{
+	opacity:0;
+}
+li.placeholder-incoming{
+	background:#ddd;
+	border-radius:10px;
+	border:3px dashed #ccc;
+	min-height:1em;
+	margin-left:-20px;
+}
+li.draggable-clone{
+	input{
+		display:none;
+	}
+}
+
+li.drag-hover{
+	background:yellow;
+}
+ol.drag-hover{
+	background:red;
+}
+
+
 .list-color-1{
 	border-left-color: #2eb4b7;
 }
