--- a/app/js/modules/layouts/templates/admin.hbs
+++ b/app/js/modules/layouts/templates/admin.hbs
@@ -1,9 +1,11 @@
 <aside id="main-left">
-	<div id="logo">
-
-	</div>
 	<nav>
-		<a href="#/something">Something</a>
+		<a href="#" id="button-home">
+			<span class="icon" id="logo"></div>
+		</a>
+		<a href="#/something" id="button-heirarchy">
+			<span class="icon heirarchy"></div>
+		</a>
 	</nav>
 </aside>
 <section id="main">
